# blur

./: .gitignore  CMakeLists.txt  README.md
ext/stb/: stb_image_write.h
src/: args.c  args.h  blur.c  blur.h  helpers.h  main.c  test  test.c
src/c/: blur.c  blur.h  cli.c  cli.h  helper.c  helpers.h  main.c
src/python/blur/: __main__.py  app.py
